--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,88 +4,104 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingTop="16dp"
-    android:background="#323131"
+    android:background="@color/Gray"
+    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
     tools:context=".loginActivity"
-    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@color/white"
-        android:gravity="center"
-        android:layout_marginTop="8dp"
-        android:text="Usuario: Gurpo9   contraseña:123456"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="49dp" />
-
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/button_run"
-        android:gravity="center"
-        android:hint="Usuario"
-        android:inputType="textEmailAddress"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/button_run"
-        android:gravity="center"
-        android:hint="Password"
-        android:imeActionLabel="SIgn_in"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+    tools:layout_editor_absoluteY="25dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_marginTop="92dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        tools:layout_editor_absoluteX="-35dp">
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/Gray"
+            android:gravity="center"
+            android:text="@string/credenciales"
+            android:textColor="@color/white" />
 
-        <Button
-            android:id="@+id/login"
-            android:layout_width="136dp"
-            android:layout_height="48dp"
-            android:layout_gravity="start"
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="125dp"
+            android:contentDescription="@string/app_name"
+            app:srcCompat="@mipmap/rest_up_logo" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textAlignment="center"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:layout_marginRight="60dp"
-            android:layout_marginBottom="64dp"
-            android:background="#F4BE31"
-            android:text="Sign in" />
+            android:textSize="20sp"
+            tools:text="@string/SolicitudCredenciales" />
+
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="25dp"
+            android:autofillHints=""
+            android:background="@drawable/button_run"
+            android:gravity="center"
+            android:hint="@string/usuario"
+            android:inputType="textEmailAddress"
+            android:selectAllOnFocus="true"
+            android:textColorHint="@color/Gray2" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="25dp"
+            android:background="@drawable/button_run"
+            android:gravity="center"
+            android:hint="@string/password"
+            android:imeActionLabel="SIgn_in"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:selectAllOnFocus="true"
+            android:textColorHint="@color/Gray2"
+            android:autofillHints="" />
 
         <Button
             android:id="@+id/btnSalir"
-            android:layout_width="114dp"
+            android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:textColor="@color/white"
-            android:layout_marginLeft="60dp"
-            android:background="#F4BE31"
-            android:text="Salir" />
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="25dp"
+            android:background="@drawable/btn_dark_style"
+            android:text="@string/SignUp"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/login"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_gravity="start"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="25dp"
+            android:background="@drawable/btn_dark_style"
+            android:text="@string/Login"
+            android:textColor="@color/white" />
     </LinearLayout>
 
 
