--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,9 +86,9 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="25dp"
-            android:background="@drawable/btn_dark_style"
             android:text="@string/SignUp"
-            android:textColor="@color/white" />
+            android:background="@drawable/btn_dark_style"
+            android:textColor="@color/Gray"/>
 
         <Button
             android:id="@+id/login"
@@ -101,7 +101,7 @@
             android:layout_marginRight="25dp"
             android:background="@drawable/btn_dark_style"
             android:text="@string/Login"
-            android:textColor="@color/white" />
+            android:textColor="@color/Gray" />
     </LinearLayout>
 
 
