--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Taller." parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Taller." parent="Theme.AppCompat.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/Gray</item>
         <item name="colorPrimaryVariant">@color/Gray2</item>
