--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,27 +58,29 @@
         android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:autofillHints=""
         android:background="@drawable/button_run"
         android:gravity="center"
         android:hint="@string/usuario"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
+        android:textColor="@color/Gray"
         android:textColorHint="@color/Gray2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.05"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        />
+        app:layout_constraintVertical_bias="0.05" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:autofillHints=""
         android:background="@drawable/button_run"
         android:gravity="center"
@@ -87,15 +89,14 @@
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:textColor="@color/Gray"
         android:textColorHint="@color/Gray2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username"
-        app:layout_constraintVertical_bias="0.025"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"/>
+        app:layout_constraintVertical_bias="0.025" />
 
     <Button
         android:id="@+id/btnSalir"
