--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,12 +7,17 @@
                 android:icon="@drawable/ic_home"
                 android:title="Menú principal"/>
             <item
+                android:id="@+id/registrarCliente"
+                android:icon="@drawable/ic_group"
+                android:title="Registrar">
+            </item>
+            <item
                 android:id="@+id/acerca"
                 android:icon="@drawable/ic_group"
                 android:title="Acerca de grupo">
             </item>
             <item
-                android:id="@+id/btnsalir"
+                android:id="@+id/bnsalir"
                 android:icon="@drawable/ic_logout"
                 android:title="Salir">
             </item>
