--- a/app/src/main/res/layout/activity_reservacion_registro.xml
+++ b/app/src/main/res/layout/activity_reservacion_registro.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="@color/Gray"
-    tools:context=".Editar_menu">
+    tools:context=".ReservacionRegistro">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -47,7 +47,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Datos de Registro"
+            android:text="Nuevo Registro"
             android:textSize="34sp"
             android:layout_margin="5dp"
             android:textColor="#F2EAEA"
@@ -62,6 +62,12 @@
         android:orientation="horizontal"
         android:layout_margin="5dp"
         android:gravity="center">
+
+        <!--TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Id"
+            /-->
 
         <EditText
 
@@ -80,7 +86,7 @@
             android:textSize="18sp"
             android:layout_weight="1"
             android:ems="10"
-            android:id="@+id/id"
+            android:id="@+id/tid"
             android:textAlignment="center"
             />
     </LinearLayout>
@@ -103,7 +109,7 @@
             android:layout_marginRight="16dp"
             android:background="@drawable/button_run"
             android:gravity="center_horizontal|center_vertical"
-            android:hint="Ingrese un producto"
+            android:hint="Ingrese fecha"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +118,7 @@
             android:textSize="18sp"
             android:layout_weight="1"
             android:ems="10"
-            android:id="@+id/name"
+            android:id="@+id/tfecha"
             android:textAlignment="center"
             />
     </LinearLayout>
@@ -133,7 +139,7 @@
             android:layout_marginRight="16dp"
             android:background="@drawable/button_run"
             android:gravity="center_horizontal|center_vertical"
-            android:hint="Ingrese precio"
+            android:hint="Ingrese hora"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -142,51 +148,71 @@
             android:textSize="18sp"
             android:layout_weight="1"
             android:ems="10"
-            android:id="@+id/precio"
+            android:id="@+id/thora"
             android:textAlignment="center"
             />
     </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="5dp"
+        android:gravity="center">
+
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/button_run"
+            android:gravity="center_horizontal|center_vertical"
+            android:hint="Cantidad de personas"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.168"
+            android:radius="12dp"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:ems="10"
+            android:id="@+id/tcantidad"
+            android:textAlignment="center"
+            />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/thora"
         android:gravity="center">
 
-
         <Button
-            android:id="@+id/actualizar"
+            android:id="@+id/btagregar1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@drawable/btn_dark_text"
             android:background="@drawable/btn_dark_style"
             android:layout_weight="1"
-            android:onClick="modificar"
-            android:text="Update" />
-
+            android:onClick="RegistroR"
+            android:text="Agregar" />
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <Button
-            android:id="@+id/bt2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@drawable/btn_dark_text"
             android:background="@drawable/btn_dark_style"
             android:layout_weight="1"
-            android:onClick="eliminar"
-            android:text="Delete" />
-
-        <Button
-            android:id="@+id/bt3"
-            android:layout_width="wrap_content"
-            android:layout_height="34dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_dark_style"
-            android:onClick="regresar"
-            android:text="Regresar"
-            android:textColor="@drawable/btn_dark_text" />
+            android:id="@+id/btncancel2"
+            android:text="Cancelar"
+            />
 
     </LinearLayout>
+
 
 </LinearLayout>
