--- a/app/src/main/res/layout/fragment_menu_principal.xml
+++ b/app/src/main/res/layout/fragment_menu_principal.xml
@@ -59,6 +59,7 @@
             android:layout_marginBottom="80dp"
             android:background="@drawable/btn_menu_promociones"
             android:gravity="bottom|center"
+            android:onClick="nuevaPromo"
             android:text="@string/Promociones"
             android:textColor="@color/white"
             android:textSize="24sp"
