--- a/app/src/main/res/layout/activity_vista_promociones.xml
+++ b/app/src/main/res/layout/activity_vista_promociones.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VistaMenu">
+    tools:context=".VistaPromociones">
+
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -42,7 +43,7 @@
 
 
     <EditText
-        android:id="@+id/product"
+        android:id="@+id/txtBusqueda"
         android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_marginStart="15dp"
@@ -51,7 +52,7 @@
         android:hint="@string/BuscarPlato"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/bcp"
+        app:layout_constraintEnd_toStartOf="@id/btnBuscar"
         app:layout_constraintHorizontal_bias="0.099"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
@@ -59,7 +60,7 @@
 
 
     <Button
-        android:id="@+id/bcp"
+        android:id="@+id/btnBuscar"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="10dp"
@@ -71,7 +72,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.69"
-        app:layout_constraintStart_toEndOf="@+id/product"
+        app:layout_constraintStart_toEndOf="@+id/txtBusqueda"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.025" />
 
@@ -82,17 +83,17 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="7dp"
         android:background="@drawable/btn_dark_style"
-        android:onClick="abrirN"
+        android:onClick="abrirNuevaPromo"
         android:text="@string/btnNuevo"
         android:textColor="@drawable/btn_dark_text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/salir"
+        app:layout_constraintEnd_toStartOf="@id/btnSalir"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/product"
+        app:layout_constraintTop_toBottomOf="@id/txtBusqueda"
         app:layout_constraintVertical_bias="0.025" />
 
     <Button
-        android:id="@+id/salir"
+        android:id="@+id/btnSalir"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="7dp"
@@ -104,12 +105,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.904"
         app:layout_constraintStart_toEndOf="@id/btnNuevo"
-        app:layout_constraintTop_toBottomOf="@id/bcp"
+        app:layout_constraintTop_toBottomOf="@id/btnBuscar"
         app:layout_constraintVertical_bias="0.025" />
 
 
     <ListView
-        android:id="@+id/lista"
+        android:id="@+id/lstPromo"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
@@ -118,5 +119,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnNuevo" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
