--- a/app/src/main/res/layout/activity_vista_menu.xml
+++ b/app/src/main/res/layout/activity_vista_menu.xml
@@ -82,7 +82,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="7dp"
         android:background="@drawable/btn_dark_style"
-        android:onClick="abrirN"
+        android:onClick="abrirNuevo"
         android:text="@string/btnNuevo"
         android:textColor="@drawable/btn_dark_text"
         app:layout_constraintBottom_toBottomOf="parent"
